AclGrammar/obj/Debug/AclScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Tom\documents\visual studio 2013\Projects\AclGrammar\AclGrammar\AclScript.g4 by ANTLR 4.5-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AclGrammar {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class AclScriptParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, ABS=13, AGE=14, ALLTRIM=15, ASCII=16, AT=17, 
		BETWEEN=18, BINTOSTR=19, BIT=20, BLANKS=21, BYTE=22, CDOW=23, CHR=24, 
		CLEAN=25, CMOY=26, COS=27, CTOD=28, CTODT=29, CTOT=30, CUMPRINC=31, CUMIPMT=32, 
		DATEF=33, DATETIMEF=34, DAY=35, DBYTE=36, DEC=37, DHEX=38, DICECOEFFICIENT=39, 
		DIGIT=40, DOW=41, DTOU=42, EBCDIC=43, EFFECTIVE=44, EOMONTH=45, EXCLUDE=46, 
		EXP=47, FILESIZE=48, FIND=49, FREQUENCY=50, FTYPE=51, FVANNUITY=52, FVLUMPSUM=53, 
		FVSCHEDULE=54, GETOPTIONS=55, GOMONTH=56, HASH=57, HEX=58, HOUR=59, HTOU=60, 
		INCLUDE=61, INSERT=62, INTF=63, IPMT=64, ISBLANK=65, ISDEFINED=66, ISFUZZYDUP=67, 
		LAST=68, BOOLOPS=69, VARSUB=70, BOOL=71, DATE=72, TIME=73, DATETIME=74, 
		STRING=75, NUM=76, OBJNAME=77, INT=78, ALPHA=79, SEP=80, EOL=81, WS=82;
	public const int
		RULE_func = 0, RULE_numFunc = 1, RULE_datetimeFunc = 2, RULE_stringFunc = 3, 
		RULE_boolFunc = 4, RULE_abs = 5, RULE_age = 6, RULE_alltrim = 7, RULE_ascii = 8, 
		RULE_at = 9, RULE_between = 10, RULE_bintostr = 11, RULE_bit = 12, RULE_blanks = 13, 
		RULE_byte = 14, RULE_cdow = 15, RULE_chr = 16, RULE_clean = 17, RULE_cmoy = 18, 
		RULE_cos = 19, RULE_ctod = 20, RULE_ctodt = 21, RULE_ctot = 22, RULE_cumprinc = 23, 
		RULE_cumipmt = 24, RULE_datef = 25, RULE_datetimef = 26, RULE_day = 27, 
		RULE_dbtye = 28, RULE_dec = 29, RULE_dhex = 30, RULE_dicecoefficient = 31, 
		RULE_digit = 32, RULE_dow = 33, RULE_dtou = 34, RULE_ebcdic = 35, RULE_effective = 36, 
		RULE_eomonth = 37, RULE_exclude = 38, RULE_exp = 39, RULE_filesize = 40, 
		RULE_find = 41, RULE_frequency = 42, RULE_ftype = 43, RULE_fvannuity = 44, 
		RULE_fvlumpsum = 45, RULE_fvschedule = 46, RULE_getoptions = 47, RULE_gomonth = 48, 
		RULE_hash = 49, RULE_hex = 50, RULE_hour = 51, RULE_htou = 52, RULE_include = 53, 
		RULE_insert = 54, RULE_intf = 55, RULE_ipmt = 56, RULE_isblank = 57, RULE_isdefined = 58, 
		RULE_isfuzzydup = 59, RULE_last = 60, RULE_expr = 61, RULE_numExpr = 62, 
		RULE_datetimeExpr = 63, RULE_stringExpr = 64, RULE_boolExpr = 65, RULE_sep = 66, 
		RULE_fStart = 67, RULE_fEnd = 68, RULE_testVARFLD = 69, RULE_testNUM = 70, 
		RULE_testSTRING = 71, RULE_testDATE = 72, RULE_testBOOL = 73, RULE_testVARSUB = 74, 
		RULE_testTIME = 75, RULE_testDATETIME = 76;
	public static readonly string[] ruleNames = {
		"func", "numFunc", "datetimeFunc", "stringFunc", "boolFunc", "abs", "age", 
		"alltrim", "ascii", "at", "between", "bintostr", "bit", "blanks", "byte", 
		"cdow", "chr", "clean", "cmoy", "cos", "ctod", "ctodt", "ctot", "cumprinc", 
		"cumipmt", "datef", "datetimef", "day", "dbtye", "dec", "dhex", "dicecoefficient", 
		"digit", "dow", "dtou", "ebcdic", "effective", "eomonth", "exclude", "exp", 
		"filesize", "find", "frequency", "ftype", "fvannuity", "fvlumpsum", "fvschedule", 
		"getoptions", "gomonth", "hash", "hex", "hour", "htou", "include", "insert", 
		"intf", "ipmt", "isblank", "isdefined", "isfuzzydup", "last", "expr", 
		"numExpr", "datetimeExpr", "stringExpr", "boolExpr", "sep", "fStart", 
		"fEnd", "testVARFLD", "testNUM", "testSTRING", "testDATE", "testBOOL", 
		"testVARSUB", "testTIME", "testDATETIME"
	};

	private static readonly string[] _LiteralNames = {
		null, "'^'", "'/'", "'*'", "'-'", "'+'", "'('", "')'", "'NOT'", "'AND'", 
		"'&'", "'OR'", "'|'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "ABS", "AGE", "ALLTRIM", "ASCII", "AT", "BETWEEN", "BINTOSTR", "BIT", 
		"BLANKS", "BYTE", "CDOW", "CHR", "CLEAN", "CMOY", "COS", "CTOD", "CTODT", 
		"CTOT", "CUMPRINC", "CUMIPMT", "DATEF", "DATETIMEF", "DAY", "DBYTE", "DEC", 
		"DHEX", "DICECOEFFICIENT", "DIGIT", "DOW", "DTOU", "EBCDIC", "EFFECTIVE", 
		"EOMONTH", "EXCLUDE", "EXP", "FILESIZE", "FIND", "FREQUENCY", "FTYPE", 
		"FVANNUITY", "FVLUMPSUM", "FVSCHEDULE", "GETOPTIONS", "GOMONTH", "HASH", 
		"HEX", "HOUR", "HTOU", "INCLUDE", "INSERT", "INTF", "IPMT", "ISBLANK", 
		"ISDEFINED", "ISFUZZYDUP", "LAST", "BOOLOPS", "VARSUB", "BOOL", "DATE", 
		"TIME", "DATETIME", "STRING", "NUM", "OBJNAME", "INT", "ALPHA", "SEP", 
		"EOL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AclScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public AclScriptParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class FuncContext : ParserRuleContext {
		public NumFuncContext numFunc() {
			return GetRuleContext<NumFuncContext>(0);
		}
		public DatetimeFuncContext datetimeFunc() {
			return GetRuleContext<DatetimeFuncContext>(0);
		}
		public StringFuncContext stringFunc() {
			return GetRuleContext<StringFuncContext>(0);
		}
		public BoolFuncContext boolFunc() {
			return GetRuleContext<BoolFuncContext>(0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_func; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAclScriptListener typedListener = listener as IAclScriptListener;
			if (typedListener != null) typedListener.EnterFunc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAclScriptListener typedListener = listener as IAclScriptListener;
			if (typedListener != null) typedListener.ExitFunc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAclScriptVisitor<TResult> typedVisitor = visitor as IAclScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncContext func() {
		FuncContext _localctx = new FuncContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_func);
		try {
			State = 158;
			switch (_input.La(1)) {
			case ABS:
			case AGE:
			case ASCII:
			case AT:
			case COS:
			case CUMPRINC:
			case CUMIPMT:
			case DAY:
			case DEC:
			case DICECOEFFICIENT:
			case DIGIT:
			case DOW:
			case EFFECTIVE:
			case EXP:
			case FILESIZE:
			case FREQUENCY:
			case FVANNUITY:
			case FVLUMPSUM:
			case FVSCHEDULE:
			case INTF:
			case IPMT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 154; numFunc();
				}
				break;
			case CTOD:
			case CTODT:
			case CTOT:
			case EOMONTH:
			case GOMONTH:
			case HOUR:
				EnterOuterAlt(_localctx, 2);
				{
				State = 155; datetimeFunc();
				}
				break;
			case ALLTRIM:
			case BINTOSTR:
			case BIT:
			case BLANKS:
			case BYTE:
			case CDOW:
			case CHR:
			case CLEAN:
			case CMOY:
			case DATEF:
			case DATETIMEF:
			case DBYTE:
			case DHEX:
			case DTOU:
			case EBCDIC:
			case EXCLUDE:
			case FTYPE:
			case GETOPTIONS:
			case HASH:
			case HEX:
			case HTOU:
			case INCLUDE:
			case INSERT:
			case LAST:
				EnterOuterAlt(_localctx, 3);
				{
				State = 156; stringFunc();
				}
				break;
			case BETWEEN:
			case FIND:
			case ISBLANK:
			case ISDEFINED:
			case ISFUZZYDUP:
				EnterOuterAlt(_localctx, 4);
				{
				State = 157; boolFunc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumFuncContext : ParserRuleContext {
		public AbsContext abs() {
			return GetRuleContext<AbsContext>(0);
		}
		public AgeContext age() {
			return GetRuleContext<AgeContext>(0);
		}
		public AsciiContext ascii() {
			return GetRuleContext<AsciiContext>(0);
		}
		public AtContext at() {
			return GetRuleContext<AtContext>(0);
		}
		public CosContext cos() {
			return GetRuleContext<CosContext>(0);
		}
		public CumprincContext cumprinc() {
			return GetRuleContext<CumprincContext>(0);
		}
		public CumipmtContext cumipmt() {
			return GetRuleContext<CumipmtContext>(0);
		}
		public DayContext day() {
			return GetRuleContext<DayContext>(0);
		}
		public DecContext dec() {
			return GetRuleContext<DecContext>(0);
		}
		public DicecoefficientContext dicecoefficient() {
			return GetRuleContext<DicecoefficientContext>(0);
		}
		public DigitContext digit() {
			return GetRuleContext<DigitContext>(0);
		}
		public DowContext dow() {
			return GetRuleContext<DowContext>(0);
		}
		public EffectiveContext effective() {
			return GetRuleContext<EffectiveContext>(0);
		}
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public FilesizeContext filesize() {
			return GetRuleContext<FilesizeContext>(0);
		}
		public FrequencyContext frequency() {
			return GetRuleContext<FrequencyContext>(0);
		}
		public FvannuityContext fvannuity() {
			return GetRuleContext<FvannuityContext>(0);
		}
		public FvlumpsumContext fvlumpsum() {
			return GetRuleContext<FvlumpsumContext>(0);
		}
		public FvscheduleContext fvschedule() {
			return GetRuleContext<FvscheduleContext>(0);
		}
		public IntfContext intf() {
			return GetRuleContext<IntfContext>(0);
		}
		public IpmtContext ipmt() {
			return GetRuleContext<IpmtContext>(0);
		}
		public NumFuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numFunc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAclScriptListener typedListener = listener as IAclScriptListener;
			if (typedListener != null) typedListener.EnterNumFunc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAclScriptListener typedListener = listener as IAclScriptListener;
			if (typedListener != null) typedListener.ExitNumFunc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAclScriptVisitor<TResult> typedVisitor = visitor as IAclScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumFunc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumFuncContext numFunc() {
		NumFuncContext _localctx = new NumFuncContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_numFunc);
		try {
			State = 181;
			switch (_input.La(1)) {
			case ABS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 160; abs();
				}
				break;
			case AGE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 161; age();
				}
				break;
			case ASCII:
				EnterOuterAlt(_localctx, 3);
				{
				State = 162; ascii();
				}
				break;
			case AT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 163; at();
				}
				break;
			case COS:
				EnterOuterAlt(_localctx, 5);
				{
				State = 164; cos();
				}
				break;
			case CUMPRINC:
				EnterOuterAlt(_localctx, 6);
				{
				State = 165; cumprinc();
				}
				break;
			case CUMIPMT:
				EnterOuterAlt(_localctx, 7);
				{
				State = 166; cumipmt();
				}
				break;
			case DAY:
				EnterOuterAlt(_localctx, 8);
				{
				State = 167; day();
				}
				break;
			case DEC:
				EnterOuterAlt(_localctx, 9);
				{
				State = 168; dec();
				}
				break;
			case DICECOEFFICIENT:
				EnterOuterAlt(_localctx, 10);
				{
				State = 169; dicecoefficient();
				}
				break;
			case DIGIT:
				EnterOuterAlt(_localctx, 11);
				{
				State = 170; digit();
				}
				break;
			case DOW:
				EnterOuterAlt(_localctx, 12);
				{
				State = 171; dow();
				}
				break;
			case EFFECTIVE:
				EnterOuterAlt(_localctx, 13);
				{
				State = 172; effective();
				}
				break;
			case EXP:
				EnterOuterAlt(_localctx, 14);
				{
				State = 173; exp();
				}
				break;
			case FILESIZE:
				EnterOuterAlt(_localctx, 15);
				{
				State = 174; filesize();
				}
				break;
			case FREQUENCY:
				EnterOuterAlt(_localctx, 16);
				{
				State = 175; frequency();
				}
				break;
			case FVANNUITY:
				EnterOuterAlt(_localctx, 17);
				{
				State = 176; fvannuity();
				}
				break;
			case FVLUMPSUM:
				EnterOuterAlt(_localctx, 18);
				{
				State = 177; fvlumpsum();
				}
				break;
			case FVSCHEDULE:
				EnterOuterAlt(_localctx, 19);
				{
				State = 178; fvschedule();
				}
				break;
			case INTF:
				EnterOuterAlt(_localctx, 20);
				{
				State = 179; intf();
				}
				break;
			case IPMT:
				EnterOuterAlt(_localctx, 21);
				{
				State = 180; ipmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DatetimeFuncContext : ParserRuleContext {
		public CtodContext ctod() {
			return GetRuleContext<CtodContext>(0);
		}
		public CtodtContext ctodt() {
			return GetRuleContext<CtodtContext>(0);
		}
		public CtotContext ctot() {
			return GetRuleContext<CtotContext>(0);
		}
		public EomonthContext eomonth() {
			return GetRuleContext<EomonthContext>(0);
		}
		public GomonthContext gomonth() {
			return GetRuleContext<GomonthContext>(0);
		}
		public HourContext hour() {
			return GetRuleContext<HourContext>(0);
		}
		public DatetimeFuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_datetimeFunc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAclScriptListener typedListener = listener as IAclScriptListener;
			if (typedListener != null) typedListener.EnterDatetimeFunc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAclScriptListener typedListener = listener as IAclScriptListener;
			if (typedListener != null) typedListener.ExitDatetimeFunc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAclScriptVisitor<TResult> typedVisitor = visitor as IAclScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDatetimeFunc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DatetimeFuncContext datetimeFunc() {
		DatetimeFuncContext _localctx = new DatetimeFuncContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_datetimeFunc);
		try {
			State = 189;
			switch (_input.La(1)) {
			case CTOD:
				EnterOuterAlt(_localctx, 1);
				{
				State = 183; ctod();
				}
				break;
			case CTODT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 184; ctodt();
				}
				break;
			case CTOT:
				EnterOuterAlt(_localctx, 3);
				{
				State = 185; ctot();
				}
				break;
			case EOMONTH:
				EnterOuterAlt(_localctx, 4);
				{
				State = 186; eomonth();
				}
				break;
			case GOMONTH:
				EnterOuterAlt(_localctx, 5);
				{
				State = 187; gomonth();
				}
				break;
			case HOUR:
				EnterOuterAlt(_localctx, 6);
				{
				State = 188; hour();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
